--- a/Comp551_Project2.ipynb
+++ b/Comp551_Project2.ipynb
@@ -21,16 +21,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "6jsO1TzMWzs5"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'numpy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
+      "\u001B[0;32m<ipython-input-1-48f7cc9a5350>\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[0;32m----> 1\u001B[0;31m \u001B[0;32mimport\u001B[0m \u001B[0mnumpy\u001B[0m \u001B[0;32mas\u001B[0m \u001B[0mnp\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m      2\u001B[0m \u001B[0;32mimport\u001B[0m \u001B[0mpandas\u001B[0m \u001B[0;32mas\u001B[0m \u001B[0mpd\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      3\u001B[0m \u001B[0;32mimport\u001B[0m \u001B[0mmath\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      4\u001B[0m \u001B[0mget_ipython\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mrun_line_magic\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m'matplotlib'\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m'inline'\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      5\u001B[0m \u001B[0;32mimport\u001B[0m \u001B[0mmatplotlib\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mpyplot\u001B[0m \u001B[0;32mas\u001B[0m \u001B[0mplt\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;31mModuleNotFoundError\u001B[0m: No module named 'numpy'"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import math\n",
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
+    "import scipy.sparse\n",
     "from IPython.core.debugger import set_trace\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
@@ -70,15 +84,10 @@
     "# Import digits dataset\n",
     "from sklearn.datasets import load_digits\n",
     "digits = load_digits()\n",
-    "print(digits.data.shape) #1797 samples, 64 features each\n",
-    "plt.imshow(digits.images[0]) #show digit \n",
     "\n",
     "# Additional OpenML dataset used in this project is the Iris dataset\n",
     "from sklearn.datasets import load_iris\n",
-    "iris = load_iris()\n",
-    "print(iris.data.shape) #150 samples, 4 features each\n",
-    "iris.target[[10, 25, 50]] #example showing data\n",
-    "list(iris.target_names)"
+    "iris = load_iris()"
    ]
   },
   {
@@ -115,66 +124,65 @@
     "class MiniBatchGradientDescent:\n",
     "\n",
     "  def __init__(self,learning_rate=.001,max_iters=1e4,epsilon=1e-8, record_history=False,batch_size=32):\n",
-    "    self.learning_rate = learning_rate\n",
-    "    self.max_iters = max_iters\n",
+    "    self.learning_rate = learning_rate      # alpha value\n",
+    "    self.max_iters = max_iters              # epchos = passes through data set\n",
     "    self.record_history = record_history\n",
-    "    self.epsilon = epsilon #termination condition\n",
-    "    self.batch_size = batch_size\n",
-    "    \n",
-    "    if record_history:\n",
-    "      self.w_history = []                 #to store the weight history for visualization\n",
+    "    self.epsilon = epsilon                  # termination condition\n",
+    "    self.batch_size = batch_size            # if 1, then SGD\n",
     "\n",
-    "  # Function for dividing the data into batches\n",
-    "  # X is data, NxD\n",
-    "  # y is classes, N\n",
-    "  def get_batches(X,y,i):\n",
+    "    if record_history:\n",
+    "      self.w_history = []\n",
+    "\n",
+    "  #################################################\n",
+    "  # METHOD: Get Batch from Data Set\n",
+    "  #################################################\n",
+    "  # PARAMETERS:\n",
+    "  # X: training vectors, shape = [n_samples,n_features] = NxD\n",
+    "  # y: target values (classes), shape = [n_samples] = N\n",
+    "  # i: batch to get\n",
+    "  # RETURNS:\n",
+    "  # X: data for this batch\n",
+    "  # y: classes for this batch\n",
+    "  #################################################\n",
+    "  def get_batches(self,X,y,i):\n",
     "      X_new = X[i:i+self.batch_size,:] #,: added to end of this for some reason?\n",
-    "      y_new = y[i:i+self.batch_size]    \n",
+    "      y_new = y[i:i+self.batch_size]\n",
     "      return X_new, y_new\n",
     "\n",
-    "  def gradient_fn(X,y,m,b):\n",
-    "    n_points = X.shape[0]\n",
-    "    m_grad = 0\n",
-    "    b_grad = 0\n",
     "\n",
-    "    for i in range(n_points):\n",
-    "      #get current pair (x,y)\n",
-    "      xi = X[i,0]\n",
-    "      yi = y[i,1]\n",
-    "\n",
-    "      #prevent crashing if missing data\n",
-    "      if (math.isnan(xi)|math.isnan(yi)):\n",
-    "        continue\n",
-    "\n",
-    "      #partial derivatives\n",
-    "      dm = -((2/n_points)*xi*(yi-(m*xi+b)))\n",
-    "      db = -((2/n_points)*(yi-(m*xi+b)))\n",
-    "\n",
-    "      #update gradient\n",
-    "      m_grad = m_grad+dm\n",
-    "      b_grad=b_grad+db\n",
-    "\n",
-    "    #update working m and b\n",
-    "    m_update = m - self.learning_rate*m_grad\n",
-    "    b_update = b - self.learning_rate*b_grad\n",
-    "\n",
-    "    return m_update,b_update \n",
-    "\n",
-    "  # Mini-Batch Gradient Descent\n",
+    "  #################################################\n",
+    "  # METHOD: Mini-Batch Gradient Descent\n",
+    "  #################################################\n",
+    "  # PARAMETERS:\n",
+    "  # X: training vectors, shape = [n_samples,n_features]\n",
+    "  # y: target values, shape = [n_samples]\n",
+    "  # w: initial weight used in calculation\n",
+    "  # RETURNS:\n",
+    "  # m: final weight (used for optimization)\n",
+    "  #################################################\n",
     "  def run(self,gradient_fn,X,y,w):\n",
-    "      num_batches = int(X.shape[0]/self.batch_size)    \n",
-    "      gradient = np.inf\n",
-    "      i = 1 #iteration counter \n",
-    "      m=0\n",
-    "      b=w\n",
-    "      while i < self.max_iters: #for each iteration\n",
-    "        for t in range(0,num_batches): #for each mini batch\n",
-    "            X_batch, y_batch = get_batches(X,y,t) #get X and y for this mini batch\n",
-    "            m,b = gradient_fn(X_batch, y_batch,m,b)\n",
-    "        i += 1 # next iteration\n",
-    "      print('m ',m)\n",
-    "      print('b ',b)\n",
-    "      return m"
+    "    num_batches = int(X.shape[0]/self.batch_size)    # number of batches = samples / batch size\n",
+    "    gradient = np.inf                                # initialize gradient to infinity\n",
+    "    beta = 0.1\n",
+    "    grad = np.inf\n",
+    "    delta_w = 0\n",
+    "\n",
+    "    i = 1\n",
+    "    while np.linalg.norm(grad) > self.epsilon and i < self.max_iters:\n",
+    "\n",
+    "      for t in range(0,num_batches):\n",
+    "        X_batch, y_batch = self.get_batches(X,y,t)\n",
+    "\n",
+    "        grad = gradient_fn(X_batch,y_batch,w)\n",
+    "\n",
+    "        delta_w = beta * delta_w + (1-beta) * grad\n",
+    "        w = w - self.learning_rate * delta_w.T\n",
+    "\n",
+    "        if self.record_history:\n",
+    "          self.w_history.append(w)\n",
+    "\n",
+    "      i += 1\n",
+    "    return w"
    ]
   },
   {
@@ -196,31 +204,95 @@
    },
    "outputs": [],
    "source": [
-    "##############################\n",
-    "# Soft Max Regression Model #\n",
-    "##############################\n",
-    "class SoftMaxRegression:\n",
-    "  # initialize model and add bias / intercept\n",
-    "  def __init__(self, add_bias=True):\n",
+    "class MultiClassLogisticRegression:\n",
+    "\n",
+    "  # initialize model parameters\n",
+    "  def __init__(self, add_bias=True, learning_rate=.1, epsilon=1e-4, max_iters=1e5):\n",
     "    self.add_bias = add_bias\n",
-    "    pass\n",
+    "    self.learning_rate = learning_rate\n",
+    "    self.epsilon = epsilon\n",
+    "    self.max_iters = max_iters\n",
+    "    self.w = []\n",
     "\n",
     "  # softmax function takes an N-dimensional vector X of real numbers\n",
-    "  # transforms into probability distribution\n",
-    "  # normalize values in vector to make function more stable at extreme values\n",
-    "  # makes values non-negative and sum to 1 \n",
-    "  def softmax(X):\n",
-    "    exps = np.exp(X - np.max(X))\n",
-    "    norms = nd.sum(exps)\n",
+    "  # transforms into valid probability distribution\n",
+    "  def softmax(self, X):\n",
+    "    exps = np.exp(X - np.max(X))      # exponentiates, forces positive values\n",
+    "    norms = np.sum(exps)              # normalizes values to sum to 1\n",
     "    return exps / norms\n",
     "\n",
-    "  # cross entropy loss\n",
-    "  def crossEntropy(yhat, y):\n",
-    "    return -nd.sum(y*nd.log(yhat+1e-6))\n",
     "\n",
-    "  # for continuous classificaiton values\n",
-    "  def sigmoid(z):\n",
-    "    return 1 / (1 + np.exp(-z))\n"
+    "  # encode categorical variable values to numbers\n",
+    "  # add 1s for unique classes and 0s in rest of matrix\n",
+    "  def one_hot_encoding(self, y):\n",
+    "    m = y.shape[0]\n",
+    "    OHX = scipy.sparse.csr_matrix((np.ones(m), (y, np.array(range(m)))))\n",
+    "    OHX = np.array(OHX.todense()).T\n",
+    "    return OHX\n",
+    "\n",
+    "  # maximizes log likelihood given correct labels\n",
+    "  def crossEntropy(yhat,y):\n",
+    "    return - nd.sum(y * nd.log(yhat+1e-6))\n",
+    "\n",
+    "  #################################################\n",
+    "  # METHOD: learn model from training data\n",
+    "  #################################################\n",
+    "  # PARAMETERS:\n",
+    "  # X: training vectors, shape = [n_samples,n_features]\n",
+    "  # y: target values, shape = [n_samples]\n",
+    "  # optimizer: function used for optimization\n",
+    "  # RETURNS:\n",
+    "  # self: object\n",
+    "  #################################################\n",
+    "  def fit(self, X, y, optimizer):\n",
+    "    if X.ndim == 1:\n",
+    "      X = X[:, None]\n",
+    "    if self.add_bias:\n",
+    "      N = X.shape[0]\n",
+    "      X = np.column_stack([X,np.ones(N)])           # add vector of 1s\n",
+    "    N,D = X.shape                                   # N samples, D features\n",
+    "\n",
+    "    def gradient(X, y, w):\n",
+    "      N,D = X.shape\n",
+    "      yh = self.softmax(np.dot(X,w.T))      # softmax on scores to get probabilities\n",
+    "      #print('yh soft: ', yh.shape)\n",
+    "      y_mat = self.one_hot_encoding(y)    # convert classs to one-hot representation\n",
+    "      #print('shape y_mat: ', y_mat.shape)\n",
+    "      #loss = (-1/N) * np.sum(y_mat * np.log(yh))\n",
+    "      try:\n",
+    "        grad = (-1/N) * np.dot(X.T,(yh-y))\n",
+    "        #grad = (-1/N) * np.dot(X.T,(yh-y_mat))\n",
+    "        #grad = 0.5*np.dot(yh-y_true, X)/N\n",
+    "        return grad\n",
+    "\n",
+    "      except ValueError as e:\n",
+    "        print(e)\n",
+    "        print('shape N: ', N)\n",
+    "        print('shape D: ', D)\n",
+    "        print('shape yh: ', yh.shape)\n",
+    "        print('shape y_mat: ', y_mat.shape)\n",
+    "\n",
+    "    w0 = np.zeros([len(np.unique(y)),D])            # initialize the weights to [classes, features]\n",
+    "    self.w = optimizer.run(gradient, X, y, w0)      # run the optimizer to get the optimal weights\n",
+    "\n",
+    "    return self\n",
+    "\n",
+    "  #####################################################\n",
+    "  # METHOD: Predict targets from X\n",
+    "  #####################################################\n",
+    "  # PARAMETERS:\n",
+    "  # X: training vectors, shape = [n_samples,n_features]\n",
+    "  # RETURNS:\n",
+    "  # yh: predicted target values, shape = [n_samples]\n",
+    "  #####################################################\n",
+    "  def predict(self, X):\n",
+    "    if X.ndim == 1:\n",
+    "      X = X[:, None]\n",
+    "    N = X.shape[0]\n",
+    "    if self.add_bias:\n",
+    "      X = np.column_stack([X,np.ones(N)])         # add bias vetor\n",
+    "    yh = self.softmax(np.dot(X,self.w.T))           # predict output yh = softmax(xW + b)\n",
+    "    return yh"
    ]
   },
   {
@@ -230,7 +302,24 @@
     "id": "Oyorh3r9Irmg"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# loaded training data digits data set\n",
+    "m_digits = digits.data.shape[0]  # number of samples\n",
+    "X_digits = digits.data           # shape=[1797,64]=[n_samples,n_features]\n",
+    "y_digits = digits.target_names   # names of target classes  (0,1...9)\n",
+    "\n",
+    "# define an optimizer\n",
+    "optimizer = MiniBatchGradientDescent(learning_rate=.005, max_iters=100, record_history=True, batch_size=m_digits)\n",
+    "\n",
+    "# define a model\n",
+    "model = MultiClassLogisticRegression()\n",
+    "\n",
+    "# pass an instance of the optimizer to the model, fit() method will run this to fit the data\n",
+    "model.fit(X_digits,y_digits,optimizer)\n",
+    "\n",
+    "model.predict(X_digits)\n",
+    "#print('w history:', optimizer.w_history)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -301,6 +390,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
